shmuel 09.02.2014 22:27:26 +0200 - build 285

1. LuaFAR: исправление обработки DM_LISTGETDATASIZE (номер элемента списка отсчитывался от 0, а не 1).

2. LuaFAR: небольшое изменение алгоритма обработки DM_LISTSETDATA.

shmuel 08.02.2014 00:41:08 +0200 - build 284

1. Уточнение билда 283.

shmuel 07.02.2014 22:37:35 +0200 - build 283

1. LuaFAR: far.SendDlgMessage(DM_LISTSETDATA) при повторной установке данных по тому же индексу
   не затирал предыдущее значение, что приводило к росту потребления памяти.

shmuel 06.02.2014 18:28:38 +0200 - build 282

1. LuaFAR: доработка far.GetDlgItem и far.SendDlgMessage(DM_GETDLGITEM):
   для элементов типа DI_LISTBOX и DI_COMBOBOX элемент 6 (ListItems) передавался нулём.

2. LuaFAR: мелкий рефакторинг.

shmuel 30.01.2014 11:20:16 +0200 - build 281

1. LuaFAR: откат билда 279 (сломалось получение пустых строк).

shmuel 29.01.2014 18:46:57 +0200 - build 280

1. Мелкий рефакторинг.

zg 29.01.2014 14:10:34 +0200 - build 279

1. LuaFAR: уточнение 276 - для несуществующих элементов DM_GETTEXT возвращает nil.

shmuel 29.01.2014 09:42:12 +0200 - build 278

1. Откат изменения DM_LISTGETCURPOS предыдущего коммита.

shmuel 28.01.2014 23:23:52 +0200 - build 277

1. LuaFAR: уточнения в DM_GETCONSTTEXTPTR и DM_LISTGETCURPOS.

zg 28.01.2014 12:07:51 +0200 - build 276

1. LuaFAR: DM_GETTEXT для несуществующих элементов диалога возвращало мусор.

shmuel 28.01.2014 01:28:32 +0200 - build 275

1. LuaFAR: работали скрипты с двумя BOM'ами (один удалял LuaFAR, второй - LuaJIT).

shmuel 24.01.2014 20:19:11 +0200 - build 274

1. LuaFAR: M#2572: far.MakeMenuItems: добавлять в таблицу не только строковое представление, но и сами объекты.

2. LuaFAR: M#2573: far.Show: возвращать выбранный пункт меню.

shmuel 21.01.2014 22:03:31 +0200 - build 273

1. LuaFAR (far.Message): добавлен флаг 'n', означающий "не делать свёртку длинных строк".

shmuel 18.01.2014 13:18:11 +0200 - build 272
